alcantara1233/msgraph-sdk-java
Recuperar cuenta Google

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,2 @@
-* @microsoftgraph/msgraph-devx-java-write
+martinezalcantara503@gmail.com* @microsoftgraph/msgraph-devx-java-write
+helpdesk@up.edu.mx/código de seguridad 
